# orion

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCH.md  CLAUDE.md  FINDINGS.md  MANIFEST.in  README.md  TODO.md  ciphertext.go  environment.yml  go.mod  go.sum  keys.go  minimax.go  params.go  params_test.go  plaintext.go  polynomial.go  pyproject.toml  setup.py  tox.ini
.claude/skills/demo-deploy/: SKILL.md
.claude/skills/ralphex-retro/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/release-lattigo/: SKILL.md
.github/actions/activate-venv/: action.yml
.github/actions/build-manylinux/: action.yml
.github/actions/convert-to-manylinux/: action.yml
.github/actions/parse-commit-flags/: action.yml
.github/docker/: Dockerfile  Dockerfile.manylinux  build.sh
.github/workflows/: build.yaml  build.yml  build_lattigo.yml  ci.yml  release-lattigo-js.yml  release-lattigo-python.yml  release-lattigo.yml  release.yml
client/: client.go
configs/: lola.yaml  mlp.yaml
demo/wasm-fhe-demo/: .gitignore  README.md
docs/plans/: 2026-02-17-client-server-separation-experiments.md  2026-02-17-orion-v2-api-redesign.md  2026-02-19-wasm-fhe-demo.md  2026-02-21-go-client-evaluator-refactor.md  2026-02-22-go-client-evaluator-refactor-v2.md  2026-02-25-post-refactor-findings.md  2026-03-01-phase-1-compiled-model.md  2026-03-01-phase-2-go-evaluator.md  2026-03-02-phase-3-package-restructuring.md  2026-03-02-phase-4-js-wasm.md  2026-03-04-phase-5-mnist-examples.md  2026-03-06-phase-6-stream-wasm-eval-keys.md  2026-03-08-phase-7-bootstrap-cifar10.md  2026-03-11-python-tooling-and-api-polish.md
evaluator/: bootstrap_test.go  doc.go  evaluator.go  evaluator_test.go  format.go  format_test.go  go.mod  go.sum  graph.go  graph_test.go  max_error_stats_test.go  model.go  model_test.go
evaluator/testdata/: .gitignore  bootstrap_mlp.expected.json  bootstrap_mlp.orion  conv2d.expected.json  conv2d.input.json  conv2d.orion  generate.py  mlp.expected.json  mlp.orion  sigmoid.expected.json  sigmoid.orion  sigmoid_unfused.expected.json  sigmoid_unfused.orion
examples/: run_lola.py  run_mlp.py  run_resnet.py  test_mlp.py
examples/alexnet/: README.md  model.py  run.py  train.py
examples/c3ae-demo/: .gitignore  ISSUES.md  README.md  generate_model.py  model.py  requirements.txt  run_fhe.py  train.py
examples/lenet/: README.md  model.py  run.py  train.py
examples/lola/: README.md  model.py  run.py  train.py
examples/mlp/: README.md  model.py  run.py  train.py
examples/models/: alexnet.py  lenet.py  lola.py  mlp.py  requirements.txt  resnet.py  run.py  train.py  vgg.py
examples/resnet/: README.md  model.py  run.py  train.py
examples/vgg/: README.md  model.py  run.py  train.py
examples/wasm-demo/: .gitignore  README.md  generate_model.py  requirements.txt
experiments/: REPORT.md  test_lt_removal.py
experiments/01_key_roundtrip/: go.mod  main.go
experiments/02_bootstrap_imported/: go.mod  main.go
experiments/03_keyless_compile/: CHANGES.md  manifest.json  run.py
experiments/04_key_import_ffi/: CHANGES.md  run.py
experiments/05_full_roundtrip/: manifest.json  run.py
experiments/06_evaluator_keyless_test/: run.py
experiments/07_galois_elements_python/: compare.py  galois.py
experiments/lattigo-wasm-bootstrap/: go.mod  main.go  test_node.js
experiments/lattigo-wasm-test/: go.mod  main.go  test_node.js
js/lattigo/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
js/lattigo/bridge/: go.mod  (+16 more)
models/: __init__.py
orion/: __init__.py  ciphertext.py  client.py  compiled_model.py  compiler.py  evaluator.py  params.py
orion/core/: __init__.py  auto_bootstrap.py  compiler_backend.py  fuser.py  galois.py  level_dag.py  orion.py  packing.py  tracer.py  utils.py
orion/models/: lola.py
orion/nn/: activation.py  linear.py  module.py  normalization.py  operations.py  pooling.py  reshape.py
orionclient/: bootstrapper.go  ciphertext.go  ciphertext_test.go  client.go  client_test.go  evaluator.go  evaluator_test.go  go.mod  keys.go  lineartransform.go  minimax.go  params.go  plaintext.go  polynomial.go  validation_test.go
orionclient/bridge/: client.go  evaluator.go  main.go  types.go
python/lattigo/: README.md  build_bridge.py  pyproject.toml  setup.py
python/lattigo/bridge/: client.go  go.mod  lattigo.go  main.go  types.go
python/lattigo/lattigo/: __init__.py  ckks.py  errors.py  ffi.py  gohandle.py  legacy_ffi.py  rlwe.py
python/orion-compiler/: README.md  pyproject.toml
python/orion-compiler/orion_compiler/: __init__.py  compiled_model.py  compiler.py  errors.py  params.py
python/orion-compiler/orion_compiler/core/: __init__.py  auto_bootstrap.py  compiler_backend.py  fuser.py  galois.py  level_dag.py  network_dag.py  packing.py  tracer.py  utils.py
python/orion-compiler/orion_compiler/models/: alexnet.py  lenet.py  lola.py  mlp.py  resnet.py  vgg.py  yolo.py
python/orion-compiler/orion_compiler/nn/: __init__.py  activation.py  linear.py  module.py  normalization.py  operations.py  pooling.py  reshape.py
python/orion-evaluator/: README.md  build_bridge.py  hatch_build.py  pyproject.toml
python/orion-evaluator/bridge/: evaluator.go  go.mod  go.sum  main.go
python/orion-evaluator/orion_evaluator/: __init__.py  errors.py  evaluator.py  ffi.py  gohandle.py  model.py
python/tests/: test_bootstrap_dag.py  test_compiled_format.py  test_error_propagation.py  test_exceptions.py  test_galois.py  test_gohandle.py  test_lattigo_api.py  test_logging.py  test_orion_evaluator.py  test_v2_api.py  test_v2_data_types.py  test_v2_dataclasses.py
tests/: common.yml  test_bootstrap_dag.py  test_compiled_format.py  test_error_propagation.py  test_galois.py  test_gohandle.py  test_imports.py  test_lola.py  test_lt_serialization.py  test_orion_evaluator.py  test_special_primes.py  test_v2_api.py  test_v2_data_types.py  test_v2_dataclasses.py  test_v2_refactor.py  test_v2_verification.py
tests/models/: test_chebyshev_model.py  test_mlp.py
tools/: build_lattigo.py  build_lattigo_wasm.py
(+97 files in other folders)
