[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orion-v2-lattigo"
version = "6.2.1"
description = "Python bindings for Lattigo CKKS primitives"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [{ name = "Mikhail Butvin", email = "butvin.mikhail@gmail.com" }]
readme = "README.md"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["lattigo"]

[project.urls]
Homepage = "https://github.com/butvinm/orion"
Repository = "https://github.com/butvinm/orion"
Issues = "https://github.com/butvinm/orion/issues"
