[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orion-v2-lattigo"
version = "6.2.3"
description = "Python bindings for Lattigo CKKS primitives"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mikhail Butvin", email = "butvin.mikhail@gmail.com" }]
readme = "README.md"
dependencies = []

[tool.hatch.build]
artifacts = ["lattigo/*.so", "lattigo/*.dylib", "lattigo/*.h"]

[tool.hatch.build.targets.wheel]
packages = ["lattigo"]

[tool.hatch.build.targets.wheel.hooks.custom]

[project.urls]
Homepage = "https://github.com/butvinm/orion"
Repository = "https://github.com/butvinm/orion"
Issues = "https://github.com/butvinm/orion/issues"
