[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orion-v2-compiler"
version = "2.1.3"
description = "Orion FHE compiler — traces, fits, and compiles PyTorch neural networks for encrypted inference"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mikhail Butvin", email = "butvin.mikhail@gmail.com" }]
readme = "README.md"
dependencies = [
    "orion-v2-lattigo",
    "torch>=2.2.0",
    "networkx>=2.6",
    "tqdm>=4.30.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0,<=1.14.1",
    "matplotlib>=3.1.0",
    "certifi",
]

[project.urls]
Homepage = "https://github.com/butvinm/orion"
Repository = "https://github.com/butvinm/orion"
Issues = "https://github.com/butvinm/orion/issues"

[tool.uv.sources]
orion-v2-lattigo = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["orion_compiler"]
