[build-system]
requires = ["poetry-core>=1.0.2", "setuptools>=61.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orion-evaluator"
version = "0.1.0"
description = "Python bindings for the Orion FHE evaluator"
authors = []
packages = [{include = "orion_evaluator"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.build]
generate-setup-file = true
script = "build_bridge.py"
