[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orion-v2-evaluator"
version = "2.1.4"
description = "Python bindings for the Orion FHE evaluator"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mikhail Butvin", email = "butvin.mikhail@gmail.com" }]
readme = "README.md"
dependencies = []

[tool.hatch.build]
artifacts = ["orion_evaluator/*.so", "orion_evaluator/*.dylib", "orion_evaluator/*.h"]

[tool.hatch.build.targets.wheel]
packages = ["orion_evaluator"]

[tool.hatch.build.targets.wheel.hooks.custom]

[project.urls]
Homepage = "https://github.com/butvinm/orion"
Repository = "https://github.com/butvinm/orion"
Issues = "https://github.com/butvinm/orion/issues"
